# ai-sdk-vite-fastapi-sample

./: .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy-local.ps1  deploy.ps1  deploy.ps1.example  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .env.example  .gcloudignore  .gitignore  package.json  pyproject.toml  retrieval_tools.yaml.example
backend/app/: dependencies.py  logging_config.py  main.py  startup.py
backend/app/ai/: __init__.py  models.py  ports.py  runtime.py
backend/app/ai/chains/: __init__.py  chat_chain.py  rag_chain.py
backend/app/ai/history/: __init__.py  factory.py  message_history.py
backend/app/ai/llms/: __init__.py  factory.py  fake_chat_model.py
backend/app/ai/retrievers/: __init__.py  factory.py  local_json_retriever.py  vertex_answer_retriever.py
backend/app/api/: authz.py  capabilities.py  chat.py  conversations.py  file.py  health.py  messages.py  spa.py
backend/app/core/: application.py  bootstrap_logging.py  config.py  dependencies.py  logging_config.py  middleware.py  request_id.py  telemetry.py
backend/app/features/authz/: authz_api.py  identity.py  models.py  ports.py  request_context.py  routes.py  schemas.py  service.py  tool_merge.py  tools.py
backend/app/features/capabilities/: models.py  routes.py  schemas.py
backend/app/features/chat/: chat_api.py  models.py  routes.py  schemas.py  stream_service.py
backend/app/features/config/: routes.py  schemas.py
backend/app/features/conversations/: conversations_api.py  models.py  ports.py  routes.py  schemas.py  service.py  tenant_scoped.py
backend/app/features/file/: mapper.py  models.py  routes.py  schemas.py
backend/app/features/health/: models.py  routes.py  schemas.py
backend/app/features/jobs/: models.py  ports.py  schemas.py
backend/app/features/messages/: models.py  ports.py  routes.py  schemas.py
backend/app/features/retrieval/: langchain_adapters.py  routes.py  schemas.py  service.py
backend/app/features/run/: message_utils.py  models.py  retrieval_context.py  service.py  web_search_utils.py
backend/app/features/spa/: routes.py
backend/app/features/title/: title_generator.py  utils.py
backend/app/features/tool_catalog/: models.py  ports.py
backend/app/features/usage/: models.py  ports.py  usage_recorder.py
backend/app/features/web_search/: __init__.py  models.py  service.py
backend/app/features/worker/: __init__.py  routes.py  schemas.py
backend/app/infra/cache/: cache_factory.py  cache_provider.py  cached_authz_repository.py  cached_message_repository.py  lru_cache.py  memory_cache_provider.py  redis_cache_provider.py
backend/app/infra/client/: cosmos_client.py  firestore_client.py  ports.py
backend/app/infra/mapper/: __init__.py  authz_mapper.py  conversations_mapper.py  jobs_mapper.py  messages_mapper.py  tool_catalog_mapper.py
backend/app/infra/model/: __init__.py  authz_model.py  conversations_model.py  jobs_model.py  messages_model.py  tool_catalog_model.py
backend/app/infra/persistence/: factory_selector.py  repository_factory.py
backend/app/infra/repository/: __init__.py
backend/app/infra/storage/: __init__.py  (+4 more)
backend/app/shared/: constants.py  exceptions.py  langchain_utils.py  llm_resolver.py  request_context.py  stream_events.py  streaming.py  time.py  usage_metrics.py
backend/scripts/: ingest_pgvector.py  provision_user.py
backend/tests/: test-env
backend/tests/contract/: conftest.py  test_authz_routes.py  test_capabilities_routes.py  test_chat_routes.py  test_conversations_routes.py  test_file_routes.py  test_health_routes.py  test_messages_routes.py  test_retrieval_routes.py
backend/tests/integration/: conftest.py  test_authz_boundary.py  test_chat_failure_flow.py  test_chat_flow.py  test_conversations_flow.py  test_file_flow.py  test_health_flow.py  test_rag_failure_flow.py  test_rag_flow.py  test_tenant_scoping.py
(+316 files in other folders)
