[project]
name = "ai-sdk-fastapi-chat-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic[email]",
  "httpx",
  "aiohttp",
  "python-multipart",
  "pydantic-settings",
  "fastapi-ai-sdk",
  "langchain",
  "langchain-openai",
  "langchain-ollama",
  "langchain-google-genai",
  "langchain-google-community",
  "google-resumable-media==2.8.0",
  "google_cloud_core==2.4.3",
  "google-generativeai",
  "google-cloud-firestore==2.22.0",
  "google-cloud-storage==3.7.0",
  "google-cloud-discoveryengine==0.16.0",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-instrumentation-requests",
  "opentelemetry-instrumentation-aiohttp-client",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "black", "isort", "flake8", "mypy", "pip-tools", "import-linter"]
duck =["ddgs"]
postgres = ["asyncpg"]
azure = [
  "openai",
  "azure-cosmos",
  "azure-storage-blob",
  "azure-monitor-opentelemetry-exporter",
  "opentelemetry-instrumentation-openai",
]
gcp = ["google-cloud-storage", "google-cloud-firestore", "google-cloud-discoveryengine", "langchain-google-genai", "langchain-google-community", "google-generativeai"]

[tool.uvicorn]
factory = false
